--- a/admin/OnlineChat.html
+++ b/admin/OnlineChat.html
@@ -816,7 +816,7 @@
             <h5>LRU HeartCare</h5>
            <a href="index.html"><i class="bi bi-speedometer2"></i> หน้าหลัก</a>
            <a href="manage_users.html"><i class="bi bi-people"></i> จัดการผู้ใช้งาน</a>
-           <a href="manage_psychologists.html"><i class="bi bi-person-vcard"></i> นักจิตวิทยา</a>
+           <a href="manage_psychologists.html"><i class="bi bi-person-vcard"></i> จัดการนักจิตวิทยา</a>
            <a href="Appointments.html"><i class="bi bi-calendar-check"></i> การนัดหมาย</a>
            <a href="OnlineChat.html" class="active"><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a>
            <a href="ManageNews.html" ><i class="bi bi-newspaper"></i> ข่าวสาร</a>
