--- a/admin/Reports.html
+++ b/admin/Reports.html
@@ -252,7 +252,7 @@
             <h5>LRU HeartCare</h5>
             <a href="index.html"><i class="bi bi-speedometer2"></i> หน้าหลัก</a>
             <a href="manage_users.html"><i class="bi bi-people"></i> จัดการผู้ใช้งาน</a>
-            <a href="manage_psychologists.html"><i class="bi bi-person-vcard"></i> นักจิตวิทยา</a>
+            <a href="manage_psychologists.html"><i class="bi bi-person-vcard"></i> จัดการนักจิตวิทยา</a>
             <a href="Appointments.html"><i class="bi bi-calendar-check"></i> การนัดหมาย</a>
             <a href="OnlineChat.html"><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a>
             <a href="#"><i class="bi bi-gear"></i> ข่าวสาร</a>
