--- a/admin/index.html
+++ b/admin/index.html
@@ -388,7 +388,7 @@ body {
                     <div class="section-box">
                         <h5>ลิงก์ด่วน</h5>
                         <div class="quick-links-grid">
-                            <a href="manage_users.html" class="quick-link-item"><i class="bi bi-person-plus link-icon"></i><span class="link-text">เพิ่มผู้ใช้งาน</span></a>
+                            <a href="manage_users.html" class="quick-link-item"><i class="bi bi-person-plus link-icon"></i><span class="link-text">จัดการผู้ใช้งาน</span></a>
                             <a href="manage_psychologists.html" class="quick-link-item"><i class="bi bi-person-vcard link-icon"></i><span class="link-text">จัดการนักจิตวิทยา</span></a>
                             <a href="#" class="quick-link-item"><i class="bi bi-calendar-event link-icon"></i><span class="link-text">สร้างนัดหมาย</span></a>
                             <a href="#" class="quick-link-item"><i class="bi bi-megaphone link-icon"></i><span class="link-text">ประกาศข่าวสาร</span></a>
