--- a/user/appointment-booking.html
+++ b/user/appointment-booking.html
@@ -354,7 +354,7 @@
                 padding-right: 45px; /* Space for icon */
             }
             .form-control[type="date"]::after {
-                content: "📅"; /* Calendar icon */
+                content: ""; /* Calendar icon */
                 position: absolute;
                 right: 15px;
                 top: 60%; /* Adjust vertical alignment */
@@ -368,7 +368,7 @@
                 padding-right: 45px; /* Space for icon */
             }
             .form-control[type="time"]::after {
-                content: "⏰"; /* Clock icon */
+                content: ""; /* Clock icon */
                 position: absolute;
                 right: 15px;
                 top: 60%; /* Adjust vertical alignment */
