--- a/psychologist/eiei.html
+++ b/psychologist/eiei.html
@@ -137,7 +137,7 @@
                 <li><a href="Homepage.html"><i class="bi bi-speedometer2"></i> หน้าหลัก</a></li>
                 <li><a href="eiei.html" class="active"><i class="bi bi-bell"></i>จัดการข้อมูลการนัดหมาย</a></li>
                 <li><a href="confirmed_data.html"><i class="bi bi-card-list"></i> การนัดหมายทั้งหมด</a></li>
-                <li><a href="Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
+                <li><a href="/user/Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
             </ul>
         </div>
         <div class="main-content">
@@ -154,7 +154,7 @@
             </nav>
             <div class="content-area">
                 <section class="page-header">
-                    <div class="container"><h1>ข้อมูลการนัดหมาย</h1><p>จัดการคำขอและติดตามสถานะการนัดหมายของนักศึกษาที่ส่งเข้ามาปรึกษา</p></div>
+                    <div class="container"><h1>จัดการข้อมูลการนัดหมาย</h1><p>จัดการคำขอและติดตามสถานะการนัดหมายของนักศึกษาที่ส่งเข้ามาปรึกษา</p></div>
                 </section>
                 
                 <div class="actions-bar container-con">
