--- a/admin/OnlineChat.html
+++ b/admin/OnlineChat.html
@@ -821,6 +821,7 @@
            <a href="OnlineChat.html" class="active"><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a>
            <a href="ManageNews.html" ><i class="bi bi-newspaper"></i> ข่าวสาร</a>
            <a href="Reports.html"><i class="bi bi-bar-chart"></i> รายงาน</a>
+           <a href="/user/Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a>
         </div>
 
         <!-- Main Content -->
