--- a/admin/Reports.html
+++ b/admin/Reports.html
@@ -257,6 +257,7 @@
             <a href="OnlineChat.html"><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a>
             <a href="#"><i class="bi bi-gear"></i> ข่าวสาร</a>
             <a href="Reports.html" class="active"><i class="bi bi-newspaper"></i> รายงาน</a>
+            <a href="/user/Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a>
           
         </div>
         <div class="main-content">
