--- a/admin/manage_psychologists.html
+++ b/admin/manage_psychologists.html
@@ -951,6 +951,7 @@
                 <a href="OnlineChat.html" ><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a>
                 <a href="ManageNews.html" ><i class="bi bi-newspaper"></i> ข่าวสาร</a>
                 <a href="Reports.html"><i class="bi bi-bar-chart"></i> รายงาน</a>
+                <a href="/user/Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a>
             </div>
 
             <div class="main-content">
