--- a/user/Login.html
+++ b/user/Login.html
@@ -425,10 +425,10 @@
     <!-- New Role Selection Buttons Added Here -->
     <div class="role-buttons-container">
         <p class="role-prompt"></p>
-        <button type="button" class="btn-role btn-psychologist" onclick="window.location.href='Psychological/psychologist/Homepage.html'">
+        <button type="button" class="btn-role btn-psychologist" onclick="window.location.href='/psychologist/Homepage.html'">
             <i class="fa-solid fa-user-doctor"></i> นักจิตวิทยา
         </button>
-        <button type="button" class="btn-role btn-admin" onclick="window.location.href='Psychological/admin/index.html'">
+        <button type="button" class="btn-role btn-admin" onclick="window.location.href='/admin/index.html'">
             <i class="fa-solid fa-user-gear"></i> แอดมิน
         </button>
     </div>
