--- a/psychologist/Homepage.html
+++ b/psychologist/Homepage.html
@@ -740,10 +740,9 @@
                     <div class="section-box">
                         <h5>กิจกรรมล่าสุด</h5>
                         <ul class="activity-list">
-                            <li><span class="activity-icon"><i class="bi bi-person-plus"></i></span><div class="activity-content"><strong>ผู้ใช้งานใหม่สมัครสมาชิก</strong><span>เมื่อ 5 นาทีที่แล้ว</span></div></li>
-                            <li><span class="activity-icon"><i class="bi bi-calendar-plus"></i></span><div class="activity-content"><strong>นพ.สมชาย เพิ่มตารางนัดหมาย</strong><span>เมื่อ 1 ชั่วโมงที่แล้ว</span></div></li>
-                            <li><span class="activity-icon"><i class="bi bi-file-earmark-text"></i></span><div class="activity-content"><strong>สร้างรายงานประจำสัปดาห์</strong><span>เมื่อวานนี้</span></div></li>
-                            <li><span class="activity-icon"><i class="bi bi-chat-dots"></i></span><div class="activity-content"><strong>ตอบกลับข้อความจากผู้ใช้งาน</strong><span>2 วันที่แล้ว</span></div></li>
+                            <li><span class="activity-icon"><i class="bi bi-person-plus"></i></span><div class="activity-content"><strong>คุณสรุปผลการปรึกษาผู้ป่วย (รหัส: A005)</strong><span>เมื่อ 5 นาทีที่แล้ว</span></div></li>
+                            <li><span class="activity-icon"><i class="bi bi-calendar-plus"></i></span><div class="activity-content"><strong>คุณเพิ่มตารางนัดหมายช่วงเช้า</strong><span>เมื่อ 1 ชั่วโมงที่แล้ว</span></div></li>
+                            <li><span class="activity-icon"><i class="bi bi-file-earmark-text"></i></span><div class="activity-content"><strong>คุณตอบกลับข้อความในระบบแชท</strong><span>เมื่อวานนี้</span></div></li>
                         </ul>
                     </div>
                 </div>
