--- a/user/Login.html
+++ b/user/Login.html
@@ -395,10 +395,10 @@
     
     <div class="login-role-links">
         <a href="../psychologist/Homepage.html" class="btn-role">
-            <i class="fa-solid fa-user-doctor"></i> เข้าสู่ระบบ นักจิตวิทยา
+            <i class="fa-solid fa-user-doctor"></i> นักจิตวิทยา
         </a>
         <a href="../admin/index.html" class="btn-role">
-            <i class="fa-solid fa-user-gear"></i> เข้าสู่ระบบ แอดมิน
+            <i class="fa-solid fa-user-gear"></i> แอดมิน
         </a>
     </div>
     
