--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=user/login.html" />
+    <meta http-equiv="refresh" content="0; url=user/Login.html" />
     <title>Redirecting...</title>
 </head>
 
