--- a/psychologist/Homepage.html
+++ b/psychologist/Homepage.html
@@ -664,7 +664,7 @@
                 <li><a href="Homepage.html" class="active"><i class="bi bi-speedometer2"></i> หน้าหลัก</a></li>
                 <li><a href="eiei.html"><i class="bi bi-bell"></i>จัดการข้อมูลการนัดหมาย</a></li>
                 <li><a href="confirmed_data.html"><i class="bi bi-card-list"></i> การนัดหมายทั้งหมด</a></li>
-                <li><a href="http://localhost/Psychological/user/login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
+                <li><a href="/user/Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
             </ul>
         </div>
         <!-- Main Content Area -->
