--- a/admin/index.html
+++ b/admin/index.html
@@ -342,10 +342,10 @@ body {
             <a href="manage_users.html"><i class="bi bi-people"></i> จัดการผู้ใช้งาน</a>
             <a href="manage_psychologists.html"><i class="bi bi-person-vcard"></i> จัดการนักจิตวิทยา</a>
             <a href="Appointments.html"><i class="bi bi-calendar-check"></i> การนัดหมาย</a>
-            <a href="OnlineChat.html" "><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a>
+            <a href="OnlineChat.html" ><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a>
             <a href="ManageNews.html" ><i class="bi bi-newspaper"></i> ข่าวสาร</a>
             <a href="Reports.html"><i class="bi bi-bar-chart"></i> รายงาน</a>
-            <a href="/user/Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a>
+            <a href="http://localhost/Psychological/user/Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a>
             
         </div>
         <div class="main-content">
