--- a/admin/Appointments.html
+++ b/admin/Appointments.html
@@ -753,7 +753,7 @@
             <a href="OnlineChat.html" "><i class="bi bi-chat-dots"></i> การแชทออนไลน์</a>
             <a href="ManageNews.html" ><i class="bi bi-newspaper"></i> ข่าวสาร</a>
             <a href="Reports.html"><i class="bi bi-bar-chart"></i> รายงาน</a>
-            <a href="/user/Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a>
+            <a href="http://localhost/Psychological/user/Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a>
             
         </div>
 
