--- a/psychologist/chat.html
+++ b/psychologist/chat.html
@@ -626,7 +626,7 @@
                 <li><a href="Homepage.html"><i class="bi bi-speedometer2"></i> หน้าหลัก</a></li>
                 <li><a href="eiei.html" ><i class="bi bi-bell"></i>จัดการข้อมูลการนัดหมาย</a></li>
                 <li><a href="confirmed_data.html" ><i class="bi bi-bell"></i> การนัดหมายทั้งหมด</a></li>
-                <li><a href="/user/Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
+                <li><a href="http://localhost/Psychological/user/Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
         </div>
         <!-- Main Content Area -->
         <div class="main-content">
