--- a/psychologist/confirmed_data.html
+++ b/psychologist/confirmed_data.html
@@ -391,7 +391,7 @@
                 <li><a href="Homepage.html"><i class="bi bi-speedometer2"></i> หน้าหลัก</a></li>
                 <li><a href="eiei.html"><i class="bi bi-bell"></i>จัดการข้อมูลการนัดหมาย</a></li>
                 <li><a href="confirmed_data.html" class="active"><i class="bi bi-card-list"></i> การนัดหมายทั้งหมด</a></li>
-                <li><a href="http://localhost/Psychological/user/Login.html"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
+                <li><a href="/http://localhost/Psychological/user/Login.html""><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a></li>
             </ul>
         </div>
         <div class="main-content">
